# pzero

./: .gitignore  CMakeLists.txt  DEFINITIONS.hpp  Menu.cpp  README.md  config.ini  game.cpp  game.h  main.cpp  monster.cpp  monster.h
Content/Worlds/: _old.txt  world.txt  world_filenames.txt
SFML/: CMakeLists.txt  main.cpp
config/: config.cpp  config.h
data/: level_1.json  mario.tsx  shop_map.json
engine/: asset_manager.h  game.cpp  game.h  input_manager.cpp  input_manager.h  machine.cpp  machine.h  resource_manager.h
ext/jsoncpp/: jsoncpp.cpp
ext/jsoncpp/json/: json.h
game_character/: character.cpp  character.h  monster.cpp  monster.h
map/: map.cpp  map.h
objects/: layer.cpp  layer.h  object.h  sprite.cpp  sprite.h
resources/map/: level_3.txt  map_filenames.txt
resources/maps/: alpha.json
state/: HelpState.cpp  Menu.h  animation.cpp  animation.h  character.cpp  character.h  collider.cpp  collider.h  game.cpp  game.h  game_arena.cpp  game_arena.h  game_arena_gui.h  game_header.cpp  game_header.h  game_over_state.cpp  game_over_state.h  game_state.h  help_state.cpp  help_state.h  in_game.cpp  in_game.h  ingame_state.cpp  ingame_state.h  main_menu_state.cpp  main_menu_state.h  menuBase.cpp  menuBase.h  menuBase_state.cpp  menuBase_state.h  menu_base.cpp  menu_base.h  pause_state.cpp  pause_state.h  platform.cpp  platform.h  player.cpp  player.h  setting_state.cpp  setting_state.h  (+9 more)
state/in_game/: assets.cpp  assets.h  camera.cpp  camera.h  icollideable.cpp  icollideable.h  iobject.h  irenderable.cpp  irenderable.h  player.cpp  player.h  sprite_info.h  sprite_object.cpp  sprite_object.h  star.h  word_manager.cpp  word_manager.h  world.cpp  world.h
state/in_game/include/: Assets.h  Blackhole.h  Camera.h  Constants.h  Direction.h  ICollideable.h  IObject.h  IRenderable.h  Player.h  SpriteInfo.h  SpriteObject.h  World.h  WorldManager.h  WorldObject.h
state/in_game/src/: Assets.cpp  Blackhole.cpp  Camera.cpp  Player.cpp  SpriteObject.cpp  World.cpp  WorldManager.cpp  WorldObject.cpp
